--- a/istio/virtual_service_canary.yml
+++ b/istio/virtual_service_canary.yml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: sockshop
+  namespace: production
 spec:
   hosts:
   - "*"
@@ -18,8 +19,8 @@ spec:
     - destination:
         host: front-end.production.svc.cluster.local
         subset: v1
-      weight: 50 #v1
+      weight: 100 #v1
     - destination:
         host: front-end.production.svc.cluster.local
         subset: v2
-      weight: 50 #v2
+      weight: 0 #v2
